src/App.css
@import url(./assets/styles/fonts.css);
@import url(./assets/styles/colors.css);
@import url(./assets/styles/transitions.css);
@import url(./assets/icons/fontawesome.min.css);

html, body {
    margin: 0;
    padding: 0;
    font-size: 18px;

    background-color: var(--background-color);
    color: var(--general-text-color);
    font-family: "Questrial";
}

p {
    font-size: 1.1rem;
    font-family: "PT Serif";
}

h1,
h2,
h3 {
    font-family: "Questrial";
}

h1 {
    font-size: 2.2rem;
    font-weight: 500;
}

h2, h3 {
    text-align: center;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.8rem;
}

.container {
    position: relative;
    display: block;
    width: 95%;
    margin: 0 auto;
}

.home h1.multiline .line:first-child {
    color: var(--general-text-color-less);
}

.home h1 {
    border-bottom: solid 1px var(--divider-color);
    width: 80%;
    margin-bottom: 0;
}

.home h1 + p {
    margin-top: .7rem;
}

.home > section {
    position: relative;
    height: 100vh;
    padding: 0 2.5%;
    margin: 0 auto;
    box-sizing: border-box;
}

.home > section:first-child {
    height: calc(100vh - 75px);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.home > section:not(:first-child) {
    padding: 20px 0;
}

.content {
    position: relative;
}

.multiline {
    display: block;
}

.multiline > .line {
    display: block;
    margin: 10px 0;
}

.button {
    position: relative;
    display: inline-block;

    border: solid 4px;
    border-radius: 10px;

    padding: 15px;
    box-sizing: border-box;

    background-color: transparent;
    
    text-decoration: none;
    text-transform: uppercase;
    text-align: center;
    font-weight: 600;

    transition: color .5s cubic-bezier(0.25, 1, 0.5, 1);
}

.button::after {
    content: '';
    display: block;
    position: absolute;

    left: 0;
    top: -1px;

    border-radius: 5px;
    box-sizing: border-box;
    
    width: 100%;
    height: calc(100% + 2px);

    transform: scaleX(0);

    opacity: 0;

    z-index: -1;

    transition: transform .40s cubic-bezier(0.25, 1, 0.5, 1), opacity .35s cubic-bezier(0.25, 1, 0.5, 1);
}

.button:hover::after {
    opacity: 1;
}

.button:focus {
    filter: brightness(.8);
}

.button.primary {
    color: var(--ternary-color);
    border-color: var(--ternary-color);
}

.button.primary::after {
    background-color: var(--ternary-color);
}

.button.primary:hover {
    color: var(--general-text-color);
}

.button.primary:hover::after {
    content: '';
    transform: scaleX(1);
}

header nav {
    position: fixed;
    z-index: 15;
    width: 100%;
    top: 0;
    left: 0;

    padding: 0 10px;
    box-sizing: border-box;

    background: var(--header-nav-background-color);
    color: var(--header-color);

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

header nav .menu-icon svg {
    color: var(--menu-icon-color);
}

header .slide {
    position: fixed;
    width: 100%;
    height: calc(100vh - 70px);
    z-index: 100;
    top: 70px;
    background-color: var(--header-menu-background);
    display: none;
    flex-direction: column;
    justify-content: center;
}

header .slide ul {
    list-style-type: none;
    padding: 0;
}

header .slide ul li {
    line-height: 4rem;
    font-size: 1.4rem;
    text-align: center;
}

header .slide .social-links {
    margin: 0 auto;
    width: 80%;
}

header .slide .social-links ul {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

header .slide .social-links ul li {
    margin: 0 20px;
}

header .slide a {
    position: relative;
    color: var(--menu-link-color);
    text-decoration: none;
    padding: 5px 10px;
}

header .slide a::after {
    content: '';
    position: absolute;
    z-index: -1;
    bottom: 0;
    right: 0;
    width: 0%;
    height: 5px;
    transform: scaleX(0%);
    transform-origin: right;
    background: var(--secondary-color);
    transition: all .5s cubic-bezier(0.19,1,0.22,1);
}

header .slide a:hover::after,
header .slide .social-links a:hover::after {
    content: '';
    position: absolute;
    z-index: -1;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 5px;
    transform: scaleX(100%);
    background: var(--ternary-color);
}

.nav-fix-height {
    position: relative;
    width: 2px;
    background: transparent;
}
.home-bio-container {
    overflow: hidden;
    width: 80%;
}

.fab-btn {
    display: flex;
    align-items: center;
    justify-content: center;

    position: absolute;
    z-index: 10;
    bottom: 1.2rem;

    width: 56px;
    height: 56px;

    background-color: var(--fab-color);
    color: var(--fab-text-color);

    border-radius: 500px;

    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.42),
                0px 0px 8px 2px rgba(0, 0, 0, 0.26);
}

.project-container {
    display: flex;
    align-items: center;
    justify-content: center;

    width: 100%;
    margin-bottom: 40px;
}

.project-container .project {
    display: flex;
    flex-direction: column;
    
    box-sizing: border-box;
    
    text-align: center;
}

.project-container .project img {
    display: block;

    width: 90%;
    margin: 0 auto;

    border-radius: 5px;
}

.project-container .project .project-description {
    width: 80%;
    margin: 0 auto;
}

.scaling-image {
    position: relative;
    overflow: hidden;
    width: 100%;
    height: 100%;
}

.scaling-image > img {
    transition: transform .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.scaling-image:hover > img {
    transform: scale(1.1);
}

.more-projects-btn {
    margin-left: 50%;
    transform: translateX(-50%);
}

